--- a/Dungeon_and_dragon_3_5_BattleSimulator/MainWindow.xaml
+++ b/Dungeon_and_dragon_3_5_BattleSimulator/MainWindow.xaml
@@ -7,10 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="89*"/>
+            <RowDefinition Height="230*"/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="136*"/>
+            <ColumnDefinition Width="381*"/>
         </Grid.ColumnDefinitions>
+        <local:LabeledTextBox Label="test" x:Name="test" Grid.RowSpan="1" />
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="56,46,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="button_Click"/>
 
     </Grid>
 </Window>
